    people complain again that it's too verbose, but probably nobody is using
    "-q" in practice to avoid having this message printed.

    A proper implementation would involve to clean-up the mess of quiet/verbose
    and convert it to only one single variable, and act verbosely accordinly,
    and perhaps tie the condition of showing progress of operations on another
    variable/mechanism.

- User visible changes:

  * Make boundaries of sessions in the log file more clear (Closes: #269275)

  * [curses] Avoid marking as auto/non-auto if already set (Closes: #265013)

- Internal changes:

  * temp.cc: simplify code and messages and reduce the use of boost libs

  * configure.ac: Remove checks for boost/scoped_array.hpp and boost/random.hpp,
    not used anymore -- a few seconds less per compilation

  * In file pkg_ver_item.cc, function pkg_ver_columnizer::setup_column(), the
    switch/case handling for longstate was missing the options added in 2007 for
    APT_HAS_TRIGGERS, present for stageflag case and both cases in
    pkg_columnizer::setup_column() of pkg_columnizer.cc.

    (In other words, it was missing in 1 of these 4 places where it is
    necessary).

  * Disable obsolete checks in configure.ac and preprocessor checks in code for
    APT_HAS_TRIGGERS, APT_HAS_HOMEPAGE and HAVE_DDTP.

    The support for these functionalities has been present in all involved tools
    since 2007-2008 or earlier, so it is safe to disable the checks and the
    dead code.

- Documentation:

  * Guide/User's Manual:

    * Document Brown colour for downgraded packages in UI (feature implemented
      in the last version)


[2015-09-17]
Version 0.7.2

- New features:

  * 'Escape' key cancels input dialogs (search, limit, etc.) (Closes: #493322)

  * Extend "firstchar" grouping policy to optionally use source package names.

    With "firstchar(binary)" or the default "firstchar" it will use binary