@@ -61,6 +61,11 @@ Version 0.7.3 UNRELEASED
     and perhaps tie the condition of showing progress of operations on another
     variable/mechanism.
 
+  * [curses] Improve the integration of Forbid upgrades (Closes: #439258)
+
+    Now it will advance the selection to the next line after marking a package
+    with 'F', if that option is enabled.
+
 - User visible changes:
 
   * Make boundaries of sessions in the log file more clear (Closes: #269275)
